# smile

./: .gitignore  README.md
mainprj/: CMakeLists.txt  main.cpp
mainprj/Toolbox/: CMakeLists.txt  Toolbox.cpp  Toolbox.h  YPLogger.h
mainprj/common/: CMakeLists.txt  common.h
mainprj/cvlib/: CMakeLists.txt  Data.cpp  Data.h  Factory.cpp  Factory.h  ResultPicture.cpp  ResultPicture.h  SmileDetector.cpp  SmileDetector.h  Video.cpp  Video.h  VideoBGRA.cpp  VideoBGRA.h  VideoDevice.cpp  VideoDevice.h  VideoSource.cpp  VideoSource.h
mainprj/ext/log/plog/Formatters/: TxtFormatter.h
mainprj/ext/websocket/asio/: buffer.hpp
mainprj/ext/websocket/websocketpp/: frame.hpp  utilities.hpp
mainprj/ext/websocket/websocketpp/common/: md5.hpp  type_traits.hpp
mainprj/ext/websocket/websocketpp/http/: parser.hpp
mainprj/ext/websocket/websocketpp/impl/: utilities_impl.hpp
mainprj/ext/websocket/websocketpp/processors/: hybi00.hpp  hybi13.hpp
mainprj/ext/websocket/websocketpp/transport/asio/: base.hpp  connection.hpp
mainprj/gui/: CMakeLists.txt  GuiContainer.cpp  GuiContainer.h  GuiHelper.cpp  GuiHelper.h  GuiMainWindow.cpp  GuiMainWindow.h  GuiResultWindow.cpp  GuiResultWindow.h  GuiVideoWindow.cpp  GuiVideoWindow.h  IconsFontAwesome5.h  d3d11helper.cpp  d3d11helper.h  d3d11imageRender.cpp  d3d11imageRender.h  fontdata.cpp  fontdata.h
mainprj/imgui/: CMakeLists.txt  imspinner.h
